# RAIL-Robomaster-Abstraction-Interface-Library

./: .gitignore  CMakeLists.txt  LICENSE  README
include/: budgeteraliases.h  iboxservo.h  ibudgeter.h  ibudgeterlist.h  idcmotor.h  ipositionmotor.h  ireversiblemotor.h  ispeedmotor.h  ispeedwheel.h  isteppermotor.h  itorquemotor.h  iwattagebudgeter.h  iwattagemanager.h  iwattbudgeter.h  iwattbudgeterlist.h  iwattmanager.h  wattagealiases.h  wattaliases.h
include/rail/: iboxservo.h  ireversiblemotor.h  iwattmanager.h
include/rail/chassis/: ichassis_input.hpp  ichassis_input_reader.hpp  iholonomic_control.hpp  iholonomic_drive.hpp  ipower_limiter.hpp  ipower_limiter_system.hpp  iquad_control.hpp  iquad_drive.hpp  quad_drive.h  quad_drive.hpp  quad_drive_data.hpp
include/rail/control/chassis/: iholonomic_drive.hpp  iquad_drive.hpp  quad_drive_data.hpp
include/rail/control/turret/: ifeeder.hpp  (+2 more)
include/rail/motor/: iposition_control.hpp  iposition_motor.hpp  irim_speed_control.hpp  ispeed_control.hpp  ispeed_motor.hpp  ispeed_wheel.hpp  ispeed_wheel_control.hpp
include/rail/motors/: iposition_control.hpp  iposition_motor.hpp  ipositionmotor.h  ipositionmotor.hpp  irim_speed_control.hpp  ispeed_control.hpp  ispeed_motor.hpp  ispeed_wheel.hpp  ispeedmotor.h  ispeedmotor.hpp  ispeedwheel.h  ispeedwheel.hpp  itorque_motor.hpp  itorquemotor.h  itorquemotor.hpp
include/rail/system/: isystem.hpp
include/rail/systems/: isystem.hpp
include/rail/turret/: iturret_input_handler.hpp
test/: CMakeLists.txt  dcmotormockup.cpp  dcmotormockup.h  dcmotortest.cpp  test.cpp
(+44 files in other folders)
